<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.mike.taller1.Principal">

    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="0.03"
        tools:layout_editor_absoluteY="8dp"
        tools:layout_editor_absoluteX="8dp">

    </RelativeLayout>

    <LinearLayout
        android:layout_width="368dp"
        android:layout_height="495dp"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp"
        android:weightSum="1">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.03"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/Registro_Persona"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textAppearance="@style/TextAppearance.AppCompat"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.03"
            android:text="@string/Nombre" />

        <EditText
            android:id="@+id/txtNombre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.03"
            android:ems="10"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.03"
            android:text="@string/Segudo_Nombre" />

        <EditText
            android:id="@+id/txtSegundoNombre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.03"
            android:text="@string/Apellido" />

        <EditText
            android:id="@+id/txtApellido"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.03"
            android:text="@string/Segundo_Apellido" />

        <EditText
            android:id="@+id/txtSegundoApellido"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.03"
            android:text="@string/Sexo" />

        <EditText
            android:id="@+id/txtSexo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.03"
            android:text="@string/Edad" />

        <EditText
            android:id="@+id/txtEdad"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.03"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button"
                android:layout_width="165dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="mostrar"
                android:text="@string/Mostrar" />

            <Button
                android:id="@+id/button2"
                android:layout_width="168dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="borrar"
                android:text="@string/Borrar" />

        </LinearLayout>

    </LinearLayout>
</android.support.constraint.ConstraintLayout>
